--- a/.github/workflows/build_docker_latest.yml
+++ b/.github/workflows/build_docker_latest.yml
@@ -117,7 +117,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./docker/testing/distributed/sebuniversal.Dockerfile
+          file: ./docker/Dockerfile
           push: true
           tags: |
             bengig/seb-server:latest
